WIP TLS support
- Base connection capability.
- Misc. improvements in the container test UI.